test/Fail/Issue2288.err
Issue2288.agda:22.1-10: error: [InstanceNoCandidate]
No instance of type Eq ∣ NatSetoid ∣ was found in scope.
when checking the definition of NatSetoid
